<resources>
    <string name="app_name">DevTodoNote</string>

    <string name="permission_denied_message">노트에 사진이나 스케치 정보를 추가하기 위해서는 저장소 접근 권한이 필요합니다</string>

    <string name="guide_description">개발을 조금 더 계획적으로\n진행할 수 있도록 도와주는 앱 입니다.</string>
    <string name="github_login">Github로 로그인하기</string>

    <string name="app_bar_title">Dev Todo Notes</string>
    <string name="app_bar_title_create_note">Todo</string>

    <string name="action_menu_search">Search</string>
    <string name="action_menu_more">More</string>
    <string name="action_menu_done">Done</string>

    <string name="cancel">취소</string>
    <string name="done">완료</string>
    <string name="reset">초기화</string>
    <string name="delete">삭제하기</string>
    <string name="edit">수정하기</string>

    <string name="plz_select_repository">작업 메모를 남길 repository를 선택해주세요,</string>

    <string name="repo_public">Public</string>
    <string name="repo_private">Private</string>
    <string name="repo_default_branch">Default branch</string>
    <string name="user_repos_content_format">public repos: %d  private repos: %d</string>

    <string name="toast_error_not_found_user">사용자를 찾을 수 없습니다.</string>
    <string name="toast_error_blank_content">내용을 입력해주세요.</string>
    <string name="toast_complete_save_drawing_board">스케치 메모가 저장되었습니다.</string>
    <string name="toast_error_not_fount_link">링크를 찾을 수 없습니다.</string>

    <string name="appbar_title_user_repository">Repo > %s</string>

    <string name="hint_input_content">내용을 입력해주세요</string>

    <string name="title_reference_image">참고 이미지</string>
    <string name="title_reference_drawing_board">스케치 메모</string>
    <string name="title_reference_link">참고 링크</string>
    <string name="branch_format">Branch: %s</string>

    <string name="hint_append_link">추가하실 링크를 입력해주세요</string>
    <string name="hint_set_branch_name">변경하실 브렌치 이름을 입력해주세요.</string>

    <string name="branch_commit">Commit</string>
    <string name="branch_merge">Merge</string>

    <string name="branch_commit_history">커밋 내역</string>

    <string name="dummy_content">Accusamus error temporibus debitis. Laboriosam qui amet sed dolor doloribus tempore esse mollitia. Voluptas debitis laudantium officia laudantium vel velit facilis. Necessitatibus sunt maiores. Pariatur libero totam velit rerum illum rem quaerat rerum cumque. Animi rem et.</string>
    <string name="toast_complete_delete_note">Todo 메모가 삭제되었습니다.</string>

    <!-- notification -->
    <string name="notification_d_day">%s 가 하루 남았습니다.</string>
</resources>