<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lottie_layer_guide"
                android:scaleType="fitCenter"
                android:layout_marginHorizontal="@dimen/standard_horizontal_margin"
                android:adjustViewBounds="true"
                app:lottie_rawRes="@raw/guide_animation"
                app:lottie_loop="true"
                app:lottie_autoPlay="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_guide_title"
                android:text="@string/app_name"
                android:textSize="@dimen/app_title_small"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/montserrat_alternates_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottie_layer_guide"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_guide_description"
                android:text="@string/guide_description"
                android:textColor="?android:attr/textColorPrimary"
                android:fontFamily="@font/montserrat_alternates_regular"
                android:textFontWeight="400"
                android:layout_marginHorizontal="@dimen/standard_horizontal_margin"
                android:textSize="@dimen/body"
                android:alpha=".7"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/normal_spacer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_guide_title"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/standard_button_height"
                android:id="@+id/button_login"
                android:text="@string/github_login"
                android:textSize="@dimen/title_small"
                android:fontFamily="@font/montserrat_alternates_bold"
                android:textColor="@color/auth_icon_color"
                android:gravity="center"
                android:drawablePadding="4dp"
                android:paddingHorizontal="@dimen/standard_horizontal_margin"
                android:layout_marginTop="@dimen/large_spacer"
                android:background="@drawable/solid_rectangle_corner_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_guide_description"
                app:drawableStartCompat="@drawable/ic_github" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/layout_loading_progress" android:id="@+id/layout_loading_progress"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
